<resources>
    <string name="app_name">Katutubo_F</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Google Sign-In -->
    <string name="default_web_client_id">171855614859-330s0pjcnocfohcc8oovdg4sho1gaoql.apps.googleusercontent.com</string>

    <!-- Cart Strings -->
    <string name="product_name_placeholder">Product Name</string>
    <string name="price_zero">₱0.00</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="default_qty">1</string>
    <string name="delete_item">Delete Item</string>
    <string name="product_image">Product Image</string>

    <!-- Order Strings -->
    <string name="order_id_prefix">Order #</string>
    <string name="total_prefix">Total: </string>
    <string name="date_prefix">Date: </string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel_order_msg">Are you sure you want to cancel this order?</string>
    <string name="confirm_cancel">Yes, Cancel</string>
    <string name="no_label">No</string>

    <!-- Home Fragment Strings -->
    <string name="market_logo_desc">Market Logo</string>
    <string name="profile_icon_char">👤</string>
    <string name="hello_text">Hello</string>
    <string name="welcome_text">Welcome to Katutubo Indigenous Market</string>
    <string name="search_hint">Search products...</string>
    <string name="category_all_text">All</string>
    <string name="category_crafts_text">Crafts</string>
    <string name="category_clothing_text">Clothing</string>
    <string name="category_accessories_text">Accessories</string>
    <string name="category_home_decor_text">Home Decor</string>

    <!-- Entrance Screen Strings -->
    <string name="katutubo_logo_desc">Katutubo Logo</string>
    <string name="katutubo_title">Katutubo</string>
    <string name="indigenous_market">Indigenous Market</string>
    <string name="enter_market">Enter Market</string>
    <string name="order_status_format">📦 %1$s</string>
    <string name="special_offers">Special Offers</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="you_may_also_like">YOU MAY ALSO LIKE</string>
    <string name="product_description_placeholder">Product description goes here</string>
    <string name="help_centre">Help Centre</string>
    <string name="special_offers_caps">SPECIAL OFFERS</string>
    <string name="recently_viewed_caps">RECENTLY VIEWED</string>
    <string name="recommendations_caps">RECOMMENDATIONS</string>
    <string name="default_badge_text">0</string>
    <string name="cancellation_details">Cancellation Details</string>
    <string name="cancellation_reason_prefix">Reason: </string>
    <string name="default_cancellation_reason">Changed my mind</string>
</resources>